Mudanças gerais no front, Conexão com o back-end e mudanças para a qualidade de vida do projeto. Além de um teste na api para subir em servidor com banco hospedado.

--- a/gerenciamento/src/main/resources/application.properties
+++ b/gerenciamento/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ProjetoLoja
-spring.profiles.active= dev
+spring.profiles.active= prod
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.deserialization.fail-on-unknown-properties=true
