--- a/gerenciamento/src/main/resources/application-prod.properties
+++ b/gerenciamento/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Loja
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=070295
+spring.datasource.password=ZfMpvBVQNSnYIUlVHTjXaGHZYyXnwEBn
