--- a/gerenciamento/src/main/resources/application-prod.properties
+++ b/gerenciamento/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://postgres-m-_1.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=ZfMpvBVQNSnYIUlVHTjXaGHZYyXnwEBn
+spring.datasource.password=XCwXeIBCJPQKbKJsSZOWLOsJnbENjfeu
